<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_auth_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/auth_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authcode"
        android:inputType="textVisiblePassword" />

    <RadioGroup 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <RadioButton android:id="@+id/radio_upload"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/upload_pref"
	        android:checked = "true"/>
	    <RadioButton android:id="@+id/radio_notify"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/notify_pref"/>
	</RadioGroup>
    
    <Button
        android:id="@+id/auth_ok_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok" />

</LinearLayout>